configs: clean and correct st defconfigs
Clean defconfigs by remove own download dir path.
Add Qt demo to dk1_demo defconfig

Signed-off-by: Kory Maincent <kory.maincent@bootlin.com>

--- a/configs/st_stm32mp157a_dk1_demo_defconfig
+++ b/configs/st_stm32mp157a_dk1_demo_defconfig
@@ -1,6 +1,5 @@
 BR2_arm=y
 BR2_cortex_a7=y
-BR2_DL_DIR="$(HOME)/buildroot_dl"
 BR2_TOOLCHAIN_BUILDROOT_GLIBC=y
 BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_5_10=y
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
@@ -15,8 +14,14 @@ BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="$(BR2_EXTERNAL_ST_PATH)/linux-config/stm32m
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="stm32mp157a-dk1"
 BR2_LINUX_KERNEL_INSTALL_TARGET=y
+BR2_PACKAGE_DEJAVU=y
 BR2_PACKAGE_QT5=y
 BR2_PACKAGE_QT5BASE_EXAMPLES=y
+BR2_PACKAGE_QT5BASE_GUI=y
+BR2_PACKAGE_QT5BASE_OPENGL_LIB=y
+BR2_PACKAGE_QT5BASE_LINUXFB=y
+BR2_PACKAGE_QT5BASE_EGLFS=y
+BR2_PACKAGE_QT5BASE_FONTCONFIG=y
 BR2_PACKAGE_GCNANO_BINARIES=y
 BR2_TARGET_ROOTFS_EXT2=y
 BR2_TARGET_ROOTFS_EXT2_4=y
