--- a/configs/st_stm32mp157c_dk2_demo_defconfig
+++ b/configs/st_stm32mp157c_dk2_demo_defconfig
@@ -22,6 +22,7 @@ BR2_PACKAGE_QT5BASE_LINUXFB=y
 BR2_PACKAGE_QT5BASE_EGLFS=y
 BR2_PACKAGE_QT5BASE_FONTCONFIG=y
 BR2_PACKAGE_GCNANO_BINARIES=y
+BR2_PACKAGE_LIBDRM_INSTALL_TESTS=y
 BR2_TARGET_ROOTFS_EXT2=y
 BR2_TARGET_ROOTFS_EXT2_4=y
 BR2_TARGET_ROOTFS_EXT2_SIZE="120M"
