config/st: bump to ST package to release 3.1
Here is the list of the component version of the new release:
ARM Trusted Firmware:
    git: https://github.com/STMicroelectronics/arm-trusted-firmware.git
    Branch: v2.4-stm32mp
    Tag: v2.4-stm32mp-r2 (3e1e3f0a6149d04946ff5debcd871173e782111c)
U-BOOT:
    git: https://github.com/STMicroelectronics/u-boot.git
    Branch: v2020.10-stm32mp
    Tag: v2020.10-stm32mp-r2 (6fde82adf71ebad4b16d99f76ed69abfd9cfaf42)
Optee-os:
    git: https://github.com/STMicroelectronics/optee_os.git
    Branch: 3.12.0-stm32mp
    Tag: 3.12.0-stm32mp-r2 (639a8566de8fa720d2cb7ab7231e8de105e7859d)
Linux Kernel:
    git: https://github.com/STMicroelectronics/linux.git
    Branch: v5.10-stm32mp
    Tag: v5.10-stm32mp-r2 (64e6a220537c5cd7e8cc5b723ef09c6341388c98)
gcnano-driver-stm32mp;
    git: https://github.com/STMicroelectronics/gcnano-binaries
    Branch: gcnano-6.4.3-binaries
    Tag: 969d11518529bb70a132909b02ddcc5736c92d91
gcnano-userland-binary
    git: https://github.com/STMicroelectronics/gcnano-binaries
    Branch: gcnano-6.4.3-binaries
    Tag: 969d11518529bb70a132909b02ddcc5736c92d91
m4projects-stm32mp1:
    git: https://github.com/STMicroelectronics/STM32CubeMP1.git
    Branch: master
    Tag: 1.5.0 (817e844fa791a34cf67df8100345f2a7382373d7)

Signed-off-by: Kory Maincent <kory.maincent@bootlin.com>

--- a/configs/st_stm32mp157c_dk2_demo_defconfig
+++ b/configs/st_stm32mp157c_dk2_demo_defconfig
@@ -7,7 +7,7 @@ BR2_ROOTFS_POST_IMAGE_SCRIPT="$(BR2_EXTERNAL_ST_PATH)/board/stmicroelectronics/s
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_GIT=y
 BR2_LINUX_KERNEL_CUSTOM_REPO_URL="https://github.com/STMicroelectronics/linux.git"
-BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="v5.10-stm32mp-r1"
+BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="v5.10-stm32mp-r2"
 BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
 BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="$(BR2_EXTERNAL_ST_PATH)/board/stmicroelectronics/stm32mp157/linux.config"
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
@@ -51,7 +51,7 @@ BR2_TARGET_ROOTFS_EXT2_SIZE="200M"
 BR2_TARGET_ARM_TRUSTED_FIRMWARE=y
 BR2_TARGET_ARM_TRUSTED_FIRMWARE_CUSTOM_GIT=y
 BR2_TARGET_ARM_TRUSTED_FIRMWARE_CUSTOM_REPO_URL="https://github.com/STMicroelectronics/arm-trusted-firmware.git"
-BR2_TARGET_ARM_TRUSTED_FIRMWARE_CUSTOM_REPO_VERSION="v2.4-stm32mp-r1"
+BR2_TARGET_ARM_TRUSTED_FIRMWARE_CUSTOM_REPO_VERSION="v2.4-stm32mp-r2"
 BR2_TARGET_ARM_TRUSTED_FIRMWARE_PLATFORM="stm32mp1"
 BR2_TARGET_ARM_TRUSTED_FIRMWARE_CUSTOM_DTS_PATH="$(BR2_EXTERNAL_ST_PATH)/board/stmicroelectronics/stm32mp157/tfa-dts/*"
 BR2_TARGET_ARM_TRUSTED_FIRMWARE_FIP=y
@@ -64,14 +64,14 @@ BR2_TARGET_ARM_TRUSTED_FIRMWARE_NEEDS_DTC=y
 BR2_TARGET_OPTEE_OS=y
 BR2_TARGET_OPTEE_OS_CUSTOM_GIT=y
 BR2_TARGET_OPTEE_OS_CUSTOM_REPO_URL="https://github.com/STMicroelectronics/optee_os.git"
-BR2_TARGET_OPTEE_OS_CUSTOM_REPO_VERSION="fa707f1f54c633c57279529a06238305d246a21b"
+BR2_TARGET_OPTEE_OS_CUSTOM_REPO_VERSION="3.12.0-stm32mp-r2"
 BR2_TARGET_OPTEE_OS_PLATFORM="stm32mp1"
 BR2_TARGET_OPTEE_OS_PLATFORM_FLAVOR="157C_DK2"
 BR2_TARGET_UBOOT=y
 BR2_TARGET_UBOOT_BUILD_SYSTEM_KCONFIG=y
 BR2_TARGET_UBOOT_CUSTOM_GIT=y
 BR2_TARGET_UBOOT_CUSTOM_REPO_URL="https://github.com/STMicroelectronics/u-boot.git"
-BR2_TARGET_UBOOT_CUSTOM_REPO_VERSION="v2020.10-stm32mp-r1"
+BR2_TARGET_UBOOT_CUSTOM_REPO_VERSION="v2020.10-stm32mp-r2"
 BR2_TARGET_UBOOT_BOARD_DEFCONFIG="stm32mp15_trusted"
 # BR2_TARGET_UBOOT_FORMAT_BIN is not set
 BR2_TARGET_UBOOT_FORMAT_CUSTOM=y
