board/stmicroelectronics/stm32mp157/linux.config: fix linux config
Add CONFIG_TMPFS the the linux configuration

Signed-off-by: Kory Maincent <kory.maincent@bootlin.com>

--- a/board/stmicroelectronics/stm32mp157/linux.config
+++ b/board/stmicroelectronics/stm32mp157/linux.config
@@ -796,6 +796,7 @@ CONFIG_OVERLAY_FS=y
 CONFIG_MSDOS_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_NTFS_FS=y
+CONFIG_TMPFS=y
 CONFIG_TMPFS_POSIX_ACL=y
 CONFIG_JFFS2_FS=y
 CONFIG_UBIFS_FS=y
