--- a/board/stmicroelectronics/stm32mp1/tfa-dts/stm32mp157a-dk1-mx-fw-config.dts
+++ b/board/stmicroelectronics/stm32mp1/tfa-dts/stm32mp157a-dk1-mx-fw-config.dts
@@ -1,6 +1,6 @@
 /* SPDX-License-Identifier: (GPL-2.0+ OR BSD-3-Clause) */
 /*
- * Copyright (C) STMicroelectronics 2021 - All Rights Reserved
+ * Copyright (C) STMicroelectronics 2022 - All Rights Reserved
  * Author: STM32CubeMX code generation for STMicroelectronics.
  */
 
@@ -9,4 +9,4 @@
  */
 
 #define DDR_SIZE	0x20000000 /* 512MB */
-#include "stm32mp15-fw-config.dts"
+#include "stm32mp15-fw-config.dtsi"
