--- a/board/stmicroelectronics/stm32mp1/tfa-dts/stm32mp157c-dk2-mx.dts
+++ b/board/stmicroelectronics/stm32mp1/tfa-dts/stm32mp157c-dk2-mx.dts
@@ -1,6 +1,6 @@
 /* SPDX-License-Identifier: (GPL-2.0+ OR BSD-3-Clause) */
 /*
- * Copyright (C) STMicroelectronics 2021 - All Rights Reserved
+ * Copyright (C) STMicroelectronics 2022 - All Rights Reserved
  * Author: STM32CubeMX code generation for STMicroelectronics.
  */
 
@@ -24,8 +24,8 @@
 /* USER CODE END includes */
 
 / {
-	model = "STMicroelectronics STM32MP157C-DK2 STM32CubeMX board - openstlinux-5.10-dunfell-mp1-21-11-17";
-	compatible = "st,stm32mp157c-dk2-mx", "st,stm32mp157";
+	model = "STMicroelectronics STM32MP157C-DK2 STM32CubeMX board - openstlinux-5.15-yocto-kirkstone-mp1-v22.06.15";
+	compatible = "st,stm32mp157c-mx", "st,stm32mp157";
 
 	memory@c0000000 {
 		device_type = "memory";
@@ -138,7 +138,6 @@
 
 &bsec{
 	status = "okay";
-	secure-status = "okay";
 
 	/* USER CODE BEGIN bsec */
 
@@ -157,7 +156,7 @@
 };
 
 &etzpc{
-	secure-status = "okay";
+	status = "okay";
 	st,decprot = <
 	/*"Non Secured" peripherals*/
 	DECPROT(STM32MP1_ETZPC_ADC_ID, DECPROT_NS_RW, DECPROT_UNLOCK)
@@ -171,12 +170,12 @@
 	DECPROT(STM32MP1_ETZPC_I2C1_ID, DECPROT_NS_RW, DECPROT_UNLOCK)
 	DECPROT(STM32MP1_ETZPC_I2C4_ID, DECPROT_NS_RW, DECPROT_UNLOCK)
 	DECPROT(STM32MP1_ETZPC_SPI2_ID, DECPROT_NS_RW, DECPROT_UNLOCK)
-	DECPROT(STM32MP1_ETZPC_RNG1_ID, DECPROT_NS_RW, DECPROT_UNLOCK)
 	DECPROT(STM32MP1_ETZPC_SAI2_ID, DECPROT_NS_RW, DECPROT_UNLOCK)
 	DECPROT(STM32MP1_ETZPC_UART4_ID, DECPROT_NS_RW, DECPROT_UNLOCK)
 	DECPROT(STM32MP1_ETZPC_USART2_ID, DECPROT_NS_RW, DECPROT_UNLOCK)
 	DECPROT(STM32MP1_ETZPC_OTG_ID, DECPROT_NS_RW, DECPROT_UNLOCK)
 	DECPROT(STM32MP1_ETZPC_VREFBUF_ID, DECPROT_NS_RW, DECPROT_UNLOCK)
+	DECPROT(STM32MP1_ETZPC_RNG1_ID, DECPROT_NS_RW, DECPROT_UNLOCK)
 	/*"NS_R S_W" peripherals*/
 	DECPROT(STM32MP1_ETZPC_DDRCTRL_ID, DECPROT_NS_R_S_W, DECPROT_LOCK)
 	DECPROT(STM32MP1_ETZPC_DDRPHYC_ID, DECPROT_NS_R_S_W, DECPROT_LOCK)
@@ -190,9 +189,6 @@
 		/*STM32CubeMX generates a basic and standard configuration for ETZPC.
 		Additional device configurations can be added here if needed.
 		"etzpc" node could be also overloaded in "addons" User-Section.*/
-	
-	DECPROT(STM32MP1_ETZPC_BKPSRAM_ID, DECPROT_S_RW, DECPROT_UNLOCK)
-	
 	/* USER CODE END etzpc_decprot */
 	>;
 
@@ -211,7 +207,6 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&i2c4_pins_z_mx>;
 	status = "okay";
-	secure-status = "okay";
 
 	/* USER CODE BEGIN i2c4 */
 	i2c-scl-rising-time-ns = <185>;
@@ -225,7 +220,6 @@
 		interrupt-controller;
 		#interrupt-cells = <2>;
 		status = "okay";
-		secure-status = "okay";
 
 		regulators{
 			compatible = "st,stpmic1-regulators";
@@ -465,7 +459,6 @@
 
 &iwdg2{
 	status = "okay";
-	secure-status = "okay";
 
 	/* USER CODE BEGIN iwdg2 */
 	timeout-sec = <32>;
@@ -475,7 +468,6 @@
 
 &pwr_regulators{
 	status = "okay";
-	secure-status = "okay";
 
 	/* USER CODE BEGIN pwr_regulators */
 	system_suspend_supported_soc_modes = <
@@ -491,10 +483,13 @@
 
 &rcc{
 	status = "okay";
-	secure-status = "okay";
-	st,csi-cal;
+
+	/* USER CODE BEGIN rcc */
 	st,hsi-cal;
+	st,csi-cal;
 	st,cal-sec = <60>;
+	/* USER CODE END rcc */
+
 	st,clksrc = <
 		CLK_MPU_PLL1P
 		CLK_AXI_PLL2P
@@ -547,7 +542,7 @@
 		CLK_SAI2_PLL3Q
 		CLK_SAI3_DISABLED
 		CLK_SAI4_DISABLED
-		CLK_RNG1_LSI
+		CLK_RNG1_CSI
 		CLK_LPTIM1_DISABLED
 		CLK_LPTIM23_DISABLED
 		CLK_LPTIM45_DISABLED
@@ -569,14 +564,10 @@
 		reg = <3>;
 		cfg = < 3 98 5 7 7 PQR(1,1,0) >;
 	};
-
-	/* USER CODE BEGIN rcc */
-	/* USER CODE END rcc */
 };
 
 &rng1{
 	status = "okay";
-	secure-status = "okay";
 
 	/* USER CODE BEGIN rng1 */
 	/* USER CODE END rng1 */
@@ -586,7 +577,6 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&rtc_pins_mx>;
 	status = "okay";
-	secure-status = "okay";
 
 	/* USER CODE BEGIN rtc */
 	/* USER CODE END rtc */
@@ -607,10 +597,18 @@
 
 &tamp{
 	status = "okay";
-	secure-status = "okay";
 
 	/* USER CODE BEGIN tamp */
 	/* USER CODE END tamp */
+};
+
+&timers15{
+	status = "okay";
+
+	/* USER CODE BEGIN timers15 */
+	st,hsi-cal-input = <7>;
+	st,csi-cal-input = <8>;
+	/* USER CODE END timers15 */
 };
 
 &uart4{
@@ -663,33 +661,6 @@
 
 &cpu1{
 	cpu-supply = <&vddcore>;
-};
-
-&nvmem_layout{
-	nvmem-cells = <&cfg0_otp>,
-			<&part_number_otp>,
-			<&monotonic_otp>,
-			<&nand_otp>,
-			<&uid_otp>,
-			<&package_otp>,
-			<&hw2_otp>,
-			<&pkh_otp>,
-			<&board_id>;
-	nvmem-cell-names = "cfg0_otp",
-			"part_number_otp",
-			"monotonic_otp",
-			"nand_otp",
-			"uid_otp",
-			"package_otp",
-			"hw2_otp",
-			"pkh_otp",
-			"board_id";
-};
-
-&timers15{
-	secure-status = "okay";
-	st,hsi-cal-input = <7>;
-	st,csi-cal-input = <8>;
 };
 /* USER CODE END addons */
 
