configs: add support for the stm32mp135f-dk board
Signed-off-by: Kory Maincent <kory.maincent@bootlin.com>

--- a/board/stmicroelectronics/stm32mp1/tfa-dts/stm32mp13-mx.dtsi
+++ b/board/stmicroelectronics/stm32mp1/tfa-dts/stm32mp13-mx.dtsi
@@ -14,14 +14,14 @@
  * Relaxed Timing Mode: false
  * Address mapping type: RBC
  *
- * Save Date: 2022.07.01, save Time: 10:00:41
+ * Save Date: 2022.07.01, save Time: 10:02:11
  */
 
 #define DDR_MEM_NAME	"DDR3-DDR3L 16bits 533000kHz"
 #define DDR_MEM_SPEED	533000
 #define DDR_MEM_SIZE	0x20000000
 
-#define DDR_MSTR 0x00041401
+#define DDR_MSTR 0x00040401
 #define DDR_MRCTRL0 0x00000010
 #define DDR_MRCTRL1 0x00000000
 #define DDR_DERATEEN 0x00000000
@@ -53,34 +53,28 @@
 #define DDR_DFIPHYMSTR 0x00000000
 #define DDR_ODTCFG 0x06000600
 #define DDR_ODTMAP 0x00000001
-#define DDR_SCHED 0x00000C01
+#define DDR_SCHED 0x00000F01
 #define DDR_SCHED1 0x00000000
-#define DDR_PERFHPR1 0x01000001
-#define DDR_PERFLPR1 0x08000200
+#define DDR_PERFHPR1 0x00000001
+#define DDR_PERFLPR1 0x04000200
 #define DDR_PERFWR1 0x08000400
 #define DDR_DBG0 0x00000000
 #define DDR_DBG1 0x00000000
 #define DDR_DBGCMD 0x00000000
 #define DDR_POISONCFG 0x00000000
 #define DDR_PCCFG 0x00000010
-#define DDR_PCFGR_0 0x00010000
+#define DDR_PCFGR_0 0x00000000
 #define DDR_PCFGW_0 0x00000000
-#define DDR_PCFGQOS0_0 0x02100C03
-#define DDR_PCFGQOS1_0 0x00800100
-#define DDR_PCFGWQOS0_0 0x01100C03
+#define DDR_PCFGQOS0_0 0x00100009
+#define DDR_PCFGQOS1_0 0x00000020
+#define DDR_PCFGWQOS0_0 0x01100B03
 #define DDR_PCFGWQOS1_0 0x01000200
-#define DDR_PCFGR_1 0x00010000
-#define DDR_PCFGW_1 0x00000000
-#define DDR_PCFGQOS0_1 0x02100C03
-#define DDR_PCFGQOS1_1 0x00800040
-#define DDR_PCFGWQOS0_1 0x01100C03
-#define DDR_PCFGWQOS1_1 0x01000200
-#define DDR_ADDRMAP1 0x00070707
+#define DDR_ADDRMAP1 0x00080808
 #define DDR_ADDRMAP2 0x00000000
-#define DDR_ADDRMAP3 0x1F000000
+#define DDR_ADDRMAP3 0x00000000
 #define DDR_ADDRMAP4 0x00001F1F
-#define DDR_ADDRMAP5 0x06060606
-#define DDR_ADDRMAP6 0x0F060606
+#define DDR_ADDRMAP5 0x07070707
+#define DDR_ADDRMAP6 0x0F070707
 #define DDR_ADDRMAP9 0x00000000
 #define DDR_ADDRMAP10 0x00000000
 #define DDR_ADDRMAP11 0x00000000
@@ -103,5 +97,3 @@
 #define DDR_ZQ0CR1 0x00000038
 #define DDR_DX0GCR 0x0000CE81
 #define DDR_DX1GCR 0x0000CE81
-#define DDR_DX2GCR 0x0000CE80
-#define DDR_DX3GCR 0x0000CE80
